<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/lyt_top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/x_bg_register_panel"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_id_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_editbox"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:maxLength="11"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_pwd_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_editbox"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_pwd_again_register"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/login_editbox"
                android:hint="@string/again_password"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/x_btn_register"
        android:gravity="center"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

</LinearLayout>